# rdr2scripthook

./: .gitignore  CMakeLists.txt  LICENSE  gen-vs2019.bat
launcher/: CMakeLists.txt
launcher/src/: CInjector.cpp  CInjector.h  rdr2d.cpp
rdrhook/: CMakeLists.txt
rdrhook/src/: dllmain.cpp  stdafx.h  structTools.h
rdrhook/src/rage/: CSysAllocator.cpp  CSysAllocator.h
rdrhook/src/scripting/: CScriptManager.cpp  CScriptManager.h  CSingleton.h  GtaThread.cpp  GtaThread.h  scrThread.h  scriptHandlerMgr.h
scripts/trainer/: CMakeLists.txt
scripts/trainer/src/: IMenu.cpp  IMenu.h  dllmain.cpp  pch.h  peds.h
scripts/trainer/src/core/: Hash.h  NativeEngine.cpp  NativeEngine.h  NativeNames.h
shared/log/: alt-log.h
shared/memory/: CMemory.h
shared/static/: epic.bat
shared/utils/: File.h  Process.h
